# fluxa-core

./: .gitignore  Cargo.toml  README.md  uniffi.toml
docs/: building.md  effect-loop.md  effects.md  integrating.md  overview.md
fluxa-streaming-engine/: Cargo.toml
fluxa-streaming-engine/src/: companion_server.rs  dv_rewrite.rs  ffmpeg_locator.rs  lib.rs  local_stream.rs  oauth_proxy.rs  torrent_engine.rs  transcode.rs
fluxa-streaming-engine/src/bindings/: jni.rs  mod.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: episode_matching.rs  manifest_parse.rs  percent_decode.rs
src/: addon_protocol.rs  addon_resource.rs  addon_store.rs  app_state.rs  calendar_plan.rs  constants.rs  content_identity.rs  core_api.rs  core_contract.rs  data_policy.rs  discovery_plan.rs  dolby_vision_rpu.rs  env.rs  external_sync.rs  ffi.rs  headless_adapter_plan.rs  home_ranking.rs  intro_segments.rs  lib.rs  library_state.rs  offline_download.rs  platform_plan.rs  player_flow.rs  player_policy.rs  player_scrobble.rs  profile_contract.rs  profile_prefs.rs  repository_flow.rs  search_plan.rs  stream_policy.rs  tmdb_plan.rs  watchlist_plan.rs
src/addon_transport/: mod.rs
src/bindings/: jni.rs  mod.rs  uniffi.rs  wasm.rs
src/headless_engine/: addons.rs  auth.rs  calendar.rs  contracts.rs  detail.rs  discover.rs  helpers.rs  home.rs  library.rs  mod.rs  navigation.rs  offline.rs  player.rs  profile.rs  search.rs  settings.rs  state.rs  sync.rs
src/runtime/: effects.rs  mod.rs  update.rs
src/runtime/msg/: action.rs  event.rs  internal.rs  mod.rs
src/types/: mod.rs
src/types/addon/: mod.rs
src/types/resource/: mod.rs
