[package]
name = "fluxa_core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.fluxa_core]
path = ".."
default-features = false
features = ["fuzzing"]

[[bin]]
name = "episode_matching"
path = "fuzz_targets/episode_matching.rs"
test = false
doc = false
bench = false

[[bin]]
name = "percent_decode"
path = "fuzz_targets/percent_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "manifest_parse"
path = "fuzz_targets/manifest_parse.rs"
test = false
doc = false
bench = false
